 - Bump minimum CMake version to 3.28. (#874)
 - Fixed error message on clashing transaction focuses. (#879)
 - Don't call`/bin/true`; macOS doesn't have it.  Just call `true`. (#885)
 - Deprecate `exec_prepared()`; just use `exec()` with a `pqxx::prepped`.
 - Deprecate `exec1()` etc.  Use `result::expect_rows()` etc.
 - Fix error-reporting crash in non-blocking connection constructor. (#894)
7.9.2
 - Fix CMake documentation install. (#848)
 - More CMake build fix. (#869)
 - Bump gcc/clang/postgres minimum version requirements.
 - Another fix to the readthedocs documentation build. (#845)
 - Remove obsolete CMake workaround kludges. (#851, #866, #867)
 - Remove obscure deprecated `stream_to` constructor that never worked. (#853)
 - Support reading a field as an SQL array using `as_sql_array()`. (#841)
 - Make row iterator a _proper_ `random_access_iterator`. (#846)
 - Downgrade result iterator to "bidirectional"; was never really RA. (#846)
7.9.1
 - Fix bad conversion of array of empty strings to string. (#816)
 - Move `[[likely]]` feature check back to compile time, to speed up configure.
 - Support `[[assume(...)]]`.
 - Fix `throw_null_conversion` compile error when converting enums. (#807)
 - Fix memory leak when failing to connect.
 - Improve introductory docs for connections and transactions.
 - Re-do entire documentation build.  No more Sphinx in readthedocs. (#802)
 - No more autodetection of doxygen etc.  Run it, or don't.
 - Docs build now disabled by default; use `--enable-documentation` to change.
7.9.0
 - Support standard libraries without `std::basic_string<std::byte>` etc.
 - `std::basic_string<std::byte` becomes `pqxx::bytes`. (#726)
 - `std::basic_string_view<std::byte>` becomes `bytes_view`. (#726)
 - Fix assertion failure when streaming row ending in empty string. (#774)
 - CMake users can `shared_link_libraries(... libpqxx::pqxx)`. (#784)
 - Support parameterised versions of `query()` etc. (#646)